El-Ahorcado-funcional

--- a/src/app/ahorcado/ahorcado.component.html
+++ b/src/app/ahorcado/ahorcado.component.html
@@ -1,13 +1,13 @@
-<div class="container-fluid text-center">
+<div id="pricipal" class="container-fluid text-center">
 
-<h1>Ahorcado</h1>
+<h1>EL Ahorcado</h1>
 
 <!-- Mostrar palabra oculta -->
 <h2>{{obtainSecretWord()}}</h2>
 
 
 <!-- TODO: Mostrar imagenes del ahorcado -->
-
+<img [src]="imageUrl+wrongWords.length+'.png'">
 
 
 
