--- a/src/app/ahorcado/ahorcado.component.css
+++ b/src/app/ahorcado/ahorcado.component.css
@@ -1,3 +1,14 @@
 #o2 {
   display: none;
   }
+
+
+#pricipal {
+  background-color: blue;
+  height: 100vmax;
+  color: white;
+
+}
+img{
+  width: 100px;
+}
