--- a/src/app/ahorcado/ahorcado.component.html
+++ b/src/app/ahorcado/ahorcado.component.html
@@ -7,7 +7,7 @@
 
 
 <!-- TODO: Mostrar imagenes del ahorcado -->
-<img [src]="imageUrl+wrongWords.length+'.png'">
+<img [src]="imageUrl+wrongWords.length+'.png'" class="card-img-top">
 
 
 
