--- a/src/app/ahorcado/ahorcado.component.css
+++ b/src/app/ahorcado/ahorcado.component.css
@@ -1,3 +1,5 @@
+
+
 #o2 {
   display: none;
   }
@@ -5,10 +7,9 @@
 
 #pricipal {
   background-image:url(https://krakenbyteblog.wordpress.com/wp-content/uploads/2022/09/2e05a-kraken-piratas-horca.jpg) ;
-  background-repeat: no-repeat;
   background-size: 230vh;
   background-color: blue;
-  height: 100vmax;
+  height: 100vh;
   color: white;
 
 }
